--- a/docs/style.css
+++ b/docs/style.css
@@ -13,6 +13,13 @@ body {
     font-size: 20px;
     color: chocolate;
 }
+.web {
+    background-color:rgb(28, 43, 56);
+    border-radius: 5px;
+    font-size: 20px;
+    color:blueviolet;
+    margin-bottom: 10px;
+}
 .tor {
     background-color:rgb(28, 43, 56);
     border-radius: 5px;
